--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,35 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-  </head>
-  <body>
-    <header>
-        <h1>Site Title</h1>
-        <ul>
-            <a href="/index.html">Home</a>
-            <a href="/about.html">About</a>
-            <a href="/index.html">Blogs</a>
-            <a href="/index.html">Events</a>
-            <a href="/links.html">Links</a>
-            <a href="/links.html">Contact</a>
-        </ul>
-    </header>
-    {{ content }}
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>{{ page.title }}</title>
+        <link href="/css/main.css" rel="stylesheet"/>
+    </head>
+    <body>
+        <header>
+            <div class="content">
+                <h1>{{ site.title }}</h1>
+                <nav>
+                    <ul>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/about.html">About</a></li>
+                        <li><a href="/blogs.html">Blogs</a></li>
+                        <li><a href="/events.html">Events</a></li>
+                        <li><a href="/links.html">Links</a></li>
+                        <li><a href="/contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <div id="body">
+            <div class="content">
+                {{ content }}
+            </div>
+        </div>
+        <footer>
+            <div class="content">
+                {{ site.title }}
+            </div>
+        </footer>
+    </body>
 </html>
