--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,15 @@ footer{
     border: solid 1px #ccc;
     border-radius: 5px;
 }
+.content_summary_more {
+    text-align: right;
+}
 .link_list_item {
     padding: 5px 0;
+}
+.blog_list_item {
+    padding: 5px 0;
+}
+ul.blog_meta_details {
+    list-style-type: none;
 }
