--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>{{ page.title }} - {{ site.title }}</title>
-        <link href="/css/main.css" rel="stylesheet"/>
+        <link href="{{ site.baseurl }}/css/main.css" rel="stylesheet"/>
     </head>
     <body>
         <header>
@@ -11,12 +11,12 @@
                 <h1>{{ site.title }}</h1>
                 <nav>
                     <ul>
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/blogs.html">Blogs</a></li>
-                        <li><a href="/events.html">Events</a></li>
-                        <li><a href="/links.html">Links</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="{{ site.baseurl }}/">Home</a></li>
+                        <li><a href="{{ site.baseurl }}/about.html">About</a></li>
+                        <li><a href="{{ site.baseurl }}/blogs.html">Blogs</a></li>
+                        <li><a href="{{ site.baseurl }}/events.html">Events</a></li>
+                        <li><a href="{{ site.baseurl }}/links.html">Links</a></li>
+                        <li><a href="{{ site.baseurl }}/contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
