--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,10 +2,17 @@
 layout: default
 ---
 
-<h2>{{ page.title }}</h2>
+<div itemscope itemtype="https://schema.org/BlogPosting">
+    <meta itemprop="url" content="{{ page.url  | absolute_url }}">
 
-<ul class="blog_meta_details">
-    <li>{{ page.date | date: "%a %e %b %Y" }}</li>
-</ul>
+    <h2 itemprop="name">{{ page.title }}</h2>
 
-{{ content }}
+    <ul class="blog_meta_details">
+        <li itemprop="dateCreated">{{ page.date | date: "%a %e %b %Y" }}</li>
+    </ul>
+
+    <div itemprop="text">
+        {{ content }}
+    </div>
+
+</div>
