--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>{{ page.title }} - {{ site.title }}</title>
         <link href="{{ site.baseurl }}/css/main.css" rel="stylesheet"/>
+        <link rel="alternate" type="application/rss+xml" href="{{ site.baseurl }}/blogs.xml">
     </head>
     <body>
         <header>
