Blogs and Events have optional description that are used in listings

--- a/_includes/recent_blog_posts.html
+++ b/_includes/recent_blog_posts.html
@@ -9,7 +9,11 @@
             </a>
         </h4>
         <div>
-            {{ post.content | strip_html | truncatewords: 50 }}
+            {% if post.description %}
+                {{ post.description }}
+            {% else %}
+                {{ post.content | strip_html | truncatewords: 50 }}
+            {% endif %}
         </div>
     </div>
 {% endfor %}
