--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
                         <li><a href="{{ site.baseurl }}/about.html">About</a></li>
                         <li><a href="{{ site.baseurl }}/blogs.html">Blogs</a></li>
                         <li><a href="{{ site.baseurl }}/events.html">Events</a></li>
+                        <li><a href="{{ site.baseurl }}/code_of_conduct.html">Code Of Conduct</a></li>
+                        <li><a href="{{ site.baseurl }}/health_policy.html">Health Policy</a></li>
                         <li><a href="{{ site.baseurl }}/links.html">Links</a></li>
                         <li><a href="{{ site.baseurl }}/contact.html">Contact</a></li>
                     </ul>
