--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>{{ page.title }} - {{ site.title }}</title>
         <link href="{{ site.baseurl }}/css/main.css" rel="stylesheet"/>
         <link rel="alternate" type="application/rss+xml" href="{{ site.baseurl }}/blogs.xml">
