--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ header nav ul {
 header nav ul li {
     display: inline-block;
     font-family: arial, sans-serif;
+    padding: 10px 10px 10px 0;
 }
 #body  {
     padding: 10px;
@@ -43,6 +44,7 @@ footer{
 }
 .end-page-navigation > div {
     padding: 10px 5px;
+    margin: 5px 0;
     border: solid 1px #ccc;
     border-radius: 5px;
 }
